#131 swap the repo to spring boot